--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: peders1n1.sh
 description: Red Team Ops and Walkthroughs.
 baseurl: ""
 url: "https://peders1n1.github.io"
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
